@@ -1,3 +1,8 @@
 # FAME-final-SP21
 
 This is the FAME final project by Chiao Ting and Cyrielle.
+You can run by
+```
+javac --module-path path_to/javafx-sdk-11.0.2/lib --add-modules javafx.controls GameEngine.java
+java --module-path path_to/javafx-sdk-11.0.2/lib --add-modules javafx.controls GameEngine
+```
